# HomologyThick

./: CMakeLists.txt  README.md
include/: Simplices.h  Triangulation.h
source/: Simplices.cc  Triangulation.cc
test/: test_simplices.cc
